// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.NavBar.Nav.Item Mixin Props control values of props Make snapshot with shallow 1`] = `
<nav
  className="color-schema-blue-rich color-schema-primary uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID01"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      id="uuID01-header"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID01-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID01-navContainer"
      >
        <nav-bar-nav
          id="uuID02"
          key="nav-0"
        >
          <nav-bar-nav-item
            className="Item className"
            id="uuID03"
            mainAttrs={
              Object {
                "style": Object {
                  "backgroundColor": "black",
                },
              }
            }
            name="Item name"
            noIndex={true}
            style={
              Object {
                "color": "red",
                "fontSize": "20px",
              }
            }
            tooltip="Item tooltip"
          >
            <Icon
              icon="mdi-home"
              id="uuID04"
            />
            Home
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkGrammar=false 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkGrammar=true 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkHighlight=false 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkHighlight=true 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkSpaces=false 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props checkSpaces=true 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props className="my-classname" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item my-classname"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props className="test-classname" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item test-classname"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props content="This is Content from ContentMixin" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Button
    bgStyle="transparent"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="This is Content from ContentMixin"
    />
  </Button>
</li>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props content=12345 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <Button
    bgStyle="transparent"
  >
    12345
  </Button>
</li>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props controlled=false 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props controlled=true 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props default props 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props disabled=false 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props disabled=false 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props disabled=true 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item uu5-common-disabled"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</li>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props disabled=true 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item uu5-common-disabled"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</li>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props dynamic=false 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props dynamic=true 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props fullTextSearchPriority=0 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item uu-fulltextsearch-0"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props hidden=false 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props hidden=false 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props hidden=true 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item uu5-common-hidden"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props hidden=true 3`] = `
<li
  className="uu5-bricks-nav-bar-nav-item uu5-common-hidden"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props href="#about" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props href="ftp://example.com/folder" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props href="https://unicorn.com/" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props href="mailto:me@example.com" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props href="www.unicorn.com" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props id="myId" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="myId"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props id="test-id" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="test-id"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props ignoreHTML=false 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props ignoreHTML=true 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props mainAttrs=undefined 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props name="myName" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  name="myName"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props nestingLevel="box" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props nestingLevel="inline" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props noIndex=false 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props noIndex=true 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item uu5-noindex uu-fulltextsearch-0"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props noPrint=false 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props noPrint=true 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props pureRender=false 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props pureRender=true 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props selected=false 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props selected=true 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item uu5-common-selected"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props style="padding:8px; borderRadius: 2px" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props style={"backgroundColor":"red","color":"blue"} 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props style={"margin":8} 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props target="_blank" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props target="_parent" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props target="_self" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props target="_top" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props textCorrector=false 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props textCorrector=true 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props tooltip="My Tooltip" 1`] = `
<li
  className="uu5-bricks-nav-bar-nav-item"
  id="uuID"
  onClick={[Function]}
  style={Object {}}
  title="My Tooltip"
/>
`;

exports[`UU5.Bricks.NavBar.Nav.Item props.Function UU5.Bricks.NavBar.Nav.Item -  onClick() should be called 1`] = `
<NavBar
  colorSchema="primary"
>
  <nav-bar-nav>
    <nav-bar-nav-item
      onClick={[Function]}
    >
      onClick
    </nav-bar-nav-item>
  </nav-bar-nav>
</NavBar>
`;
